[package]
name = "fractic-env-config"
version = "0.2.0"
authors = ["Mart van Buren <mart@fractic.io>"]
edition = "2021"

[dependencies]
aws-config = "1.5.1"
aws-sdk-secretsmanager = "1.35.0"
fractic-generic-server-error = { git = "https://github.com/fractic-io/rust-generic-server-error.git" }
serde_json = "1.0.118"

[dev-dependencies]
once_cell = "1.19.0"
